Fixed misaligned title bar accent text

--- a/css/bbui.css
+++ b/css/bbui.css
@@ -1101,7 +1101,7 @@ body, html {
 	text-align:left;
 	padding-top:2px;
 	padding-left: 10px;
-	margin-top:-12px;
+	margin-top:-52px;
 	font-size: 29pt;
 	overflow: hidden;
 	white-space:nowrap;
